# iced_example

./: Cargo.toml  README.md
013/: Cargo.toml
013/src/: main.rs
013/src/ui/: layout.rs  mod.rs
013/src/ui/styles/: container_style.rs  mod.rs
src/: main.rs
src/application/: audio_stream_handler.rs  mod.rs
src/config/: logger.rs
src/gui/: layout.rs  mod.rs  process_file.rs  process_limit.rs
src/gui/rvc/: device_settings.rs  general_settings.rs  main_start.rs  mod.rs  model_settings.rs  performance_settings.rs  redirect_stdout.rs  rvc_layout.rs
src/gui/style/: button_style.rs  container_style.rs  mod.rs  scrollable_style.rs
src/win32api/: mod.rs
